# ELECTRE-Methods

./: .gitignore  LICENCE  README.md  concordance.py  discordance.py  main.py  module m1 examples.ipynb  module m2 examples.ipynb  module_3.ipynb  pyproject.toml  requirements.txt  tox.ini
.github/workflows/: python-pep8-typing.yml  python-tests.yml
core/: __init__.py  aliases.py  functions.py  performance_table.py  scales.py  set_functions.py  sets.py  sorting.py
diviz_xmls/: alternatives.xml  criteria.xml  performances.xml  profiles.xml  profiles_performance.xml  reinforcement_factors.xml  weights.xml
docs/: Makefile  conf.py  index.rst  mcda.core.rst  mcda.electre.outranking.rst  mcda.electre.rst  mcda.plot.rst  mcda.rst  modules.rst  refs.bib
docs/source/: conf.py  electre.rst  index.rst  modules.rst
examples/: Sorting_case_study.ipynb  all_modules.ipynb  case_study_1.ipynb  connections_betweeen_modules.ipynb  m10 credibility with counter veto.ipynb  m11 credibilityIV.ipynb  m14 distillation examples.ipynb  m14&15 distillation examples.ipynb  m15 nfs.ipynb  m15_nfs.ipynb  m21 tri-nB.ipynb  m21&22 tri-B & tri-C.ipynb  m21_tri-nB.ipynb  m4 discordance_binary.ipynb  m5&6 discordance.ipynb  m9 credibility.ipynb  module m1 concordance.ipynb  module m1 examples.ipynb  module m16-m18 examples.ipynb  module m2 concordance_reinforced.ipynb  module m2 examples.ipynb  module m3 examples.ipynb  module m4 examples.ipynb  module m5 examples.ipynb  module m8 examples.ipynb  module m9 examples.ipynb
examples/case_studies/: choice-problem-example.ipynb  rank-problem-example.ipynb  sorting-problem.ipynb
examples/modules/: connections_betweeen_modules.ipynb  m1 concordance.ipynb  m10 credibility with counter veto.ipynb  m11 credibilityIV.ipynb  m12&13 crisp outranking.ipynb  m14 kernel.ipynb  m15 nfs.ipynb  m16-19 distillation examples.ipynb  m2 concordance_reinforced.ipynb  m20&22 tri-B & tri-C.ipynb  m21 tri-nB.ipynb  m3 concordance_with_interactions.ipynb  m4 discordance_binary.ipynb  m5&6 discordance.ipynb  m7 non_discordance.ipynb  m8 counter_veto.ipynb  m9 credibility.ipynb
mcda/core/: __init__.py  functions.py  scales.py  (+1 more)
tests/: helpers.py  test_class_assignment.py  test_credibility.py  test_distillation.py  test_outranking_relation.py  test_threshold.py  test_validation.py
(+43 files in other folders)
