[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "electre-methods"
version = "0.0.8"
authors = [
  { name="Agnieszka Klimek", email="aga.klimek.klimek@gmail.com" },
  { name="Anna Prałat", email="anna@pralat.pl" },
  { name="Patryk Hubicki", email="zie.patryk@gmail.com" },
  { name="Tomasz Budner", email="tomasz.budner.ad@gmail.com" },
]
description = "Package with broad spectrum of elementary ELECTRE-based modules that can be joined together in many different combinations and used via a user-friendly Python library"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "numpy>=1.19.5; python_version <= '3.9'",
    "numpy>=1.21.3; python_version == '3.10'",
    "numpy>=1.23.2; python_version >= '3.11'",
    "pandas>=1.1.5; python_version <= '3.9'",
    "pandas>=1.4; python_version == '3.10'",
    "pandas>=1.5; python_version >= '3.11'",
    "graphviz>=0.20.1",
    "networkx>=3.1"
]

[project.urls]
"Homepage" = "https://github.com/PatrykHub/ELECTRE-Methods"
"Bug Tracker" = "https://github.com/PatrykHub/ELECTRE-Methods/issues"